--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my practic web</title>
+    <link rel="stylesheet" href="styles/web.css">
+   
 </head>
 <body>
     <div>
         <h2>Ajker Gittu, Agamidiner Skill</h2>
         <h3>ki likhmu jana nai</h3>
-        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sint labore laborum! Vero amet delectus sapiente, sit quaerat facilis odio ullam cum praesentium aut sunt quis numquam dolorum corrupti debitis?</p>
+
     </div>
 </body>
 </html>
