--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my practic web</title>
     <link rel="stylesheet" href="styles/web.css">
+    <h2>Notun Chador With Sirat❤️</h2>
+    <img width="400px" src="images/Chiru.jpg" alt="">
+    <h2>Hatibandha Lalmonirhat:</h2>
+    <img width="400px" src="images/Saiduzzaman.jpg" alt="">
    
 </head>
 <body>
