--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my practic web</title>
     <link rel="stylesheet" href="styles/web.css">
-    <h2>Notun Chador With Sirat❤️</h2>
-    <img width="400px" src="images/Chiru.jpg" alt="">
-    <h2>Hatibandha Lalmonirhat:</h2>
-    <img width="400px" src="images/Saiduzzaman.jpg" alt="">
-   
+    
 </head>
 <body>
     <div>
@@ -17,6 +13,13 @@
         <h3>ki likhmu jana nai</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sint labore laborum! Vero amet delectus sapiente, sit quaerat facilis odio ullam cum praesentium aut sunt quis numquam dolorum corrupti debitis?</p>
 
+    </div>
+    <div>
+        <h2>Notun Chador With Sirat❤️</h2>
+    <img width="400px" src="images/Chiru.jpg" alt="">
+    <h2>Hatibandha Lalmonirhat:</h2>
+    <img width="400px" src="images/Saiduzzaman.jpg" alt="">
+   
     </div>
 </body>
 </html>
